[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Knife.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dude.tscn" type="PackedScene" id=3]
[ext_resource path="res://Spring.tscn" type="PackedScene" id=4]
[ext_resource path="res://Blocky.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 503, 114, 0, 0, 0, 0, 584, 144, 0, 0, 0, 0, 632, 216, 0, 0, 0, 0, 632, 336, 0, 0, 0, 0, 568, 416, 0, 0, 0, 0, 464, 448, 0, 0, 0, 0, 352, 408, 0, 0, 0, 0, 312, 320, 0, 0, 0, 0, 320, 216, 0, 0, 0, 0, 376, 144, 0, 0, 0, 0, 449, 114, 0, 0, 0, 0, 503, 114 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0 )
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
knive_scene = ExtResource( 2 )
dude_scene = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -44.0
margin_top = -49.0
margin_right = 2474.0
margin_bottom = 1420.0

[node name="Purchase" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -78.0
margin_right = 36.0
margin_bottom = -58.0
text = "Buy Knife"

[node name="Knives" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -35.0
margin_right = -52.0
margin_bottom = -21.0
text = "Knife:"

[node name="KnivesCount" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = -21.0
text = "0"

[node name="BloodCount" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "0"

[node name="Blood" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = -7.0
margin_right = -51.5
margin_bottom = 7.0
text = "Blood:"

[node name="Pause" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -95.0
margin_top = 39.0
margin_right = -45.0
margin_bottom = 59.0
text = "Pause"

[node name="Knife" parent="." instance=ExtResource( 2 )]
visible = false

[node name="KnifePath" type="Path2D" parent="."]
position = Vector2( 48, 0 )
curve = SubResource( 1 )

[node name="KnifePathPoint" type="PathFollow2D" parent="KnifePath"]
position = Vector2( 503, 114 )
rotation = 0.354704

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DudePath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="DudePathLocation" type="PathFollow2D" parent="DudePath"]

[node name="Spring" parent="." instance=ExtResource( 4 )]
position = Vector2( -547, 568 )

[node name="SpringSwitch" type="Timer" parent="."]
wait_time = 10.0

[node name="Dude" parent="." instance=ExtResource( 3 )]
position = Vector2( -416, 432 )

[node name="Blocky" parent="." instance=ExtResource( 5 )]
position = Vector2( -752, 576 )

[node name="Blocky2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1792, 568 )

[connection signal="visibility_changed" from="." to="." method="_on_HUD_visibility_changed"]
[connection signal="pressed" from="Purchase" to="." method="_on_Purchase_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="bounce" from="Spring" to="." method="_on_Spring_bounce"]
[connection signal="timeout" from="SpringSwitch" to="." method="_on_SpringSwitch_timeout"]
